# SYKO

./: CMakeLists.txt  README.md  f_cbi.c  f_in.c  f_out.c  f_ret.c  f_rjmp.c  f_sbi.c  f_sbrs.c  file_gpio_in.txt  file_gpio_out.txt  gpio.c  gpio.h  interpreter.c  interrupt.c  main.c  makefile  mem_abs.c  mem_abs.h  spi.c  spi.h  types.h
